chore: making minor changes to work with gh pages

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kirkinho08.github.io/Hospital-KB/",
+  "homepage": "https://Kirkinho08.github.io/Hospital-KB/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
