--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kirkinho08.gicthub.io/Hospital-KB/frontend",
+  "homepage": "https://kirkinho08.github.io/Hospital-KB/frontend",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
